# TsarChain

./: .gitignore  INSTALL_NATIVE.md  LICENSE  README.md  REFERENCES.md  TRADEMARKS.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.tsarcache/: balances.json
apps/: archivist.py  cli_miner.py  cli_node_miner.py  cli_seeds.py  kremlin.py  light_wallet.py  miner_gui.py  node_storage.py
data/Block/: blockchain.json  blockchain.json.bak-20251004-115140  blockchain.json.sha256
data/State/: state.json  state.json.bak-20251004-115140  state.json.sha256
data/UTXOS/: utxos.json  utxos.json.bak-20251004-115140  utxos.json.sha256
data/storage/: index.json  index.json.sha256
data_user/: chat_config.json  node_key.json  peer_keys.json  peer_keys.json.sha256  user_key.json
scripts/: filter_requirements.py
src/tsarchain/consensus/: __init__.py  blockchain.py  chain_ops.py  chain_storage.py  difficulty.py  genesis.py  mining.py  rewards.py  utxo_validate.py  validation.py
src/tsarchain/contracts/: __init__.py  storage_nodes.py
src/tsarchain/core/: block.py  coinbase.py  tx.py
src/tsarchain/mempool/: __init__.py  pool.py
src/tsarchain/network/: broadcast.py  node.py  peers_storage.py  processing_msg.py  protocol.py  wallet_route.py
src/tsarchain/storage/: db.py  kv.py  utxo.py
tests/: native_test.py  test_chat_double_ratchet.py
tools/: apply_headers.py  db_stat.py  db_vacuum.py  generate_snapshot_manifest.py
tsarcore_native/: Cargo.toml  LICENSE  README.md  pyproject.toml
tsarcore_native/src/: lib.rs  validation.rs
(+69 files in other folders)
